--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.DOCKERH_TOKEN }}
 
         #Build and push event with tag techtrends/latest
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
